[gd_scene load_steps=9 format=2]

[ext_resource path="res://levels/LevelTemplate.gd" type="Script" id=1]
[ext_resource path="res://assets/environment/layers/back.png" type="Texture" id=2]
[ext_resource path="res://assets/environment/layers/middle.png" type="Texture" id=3]
[ext_resource path="res://HUD.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/tilesets/tiles_world.tres" type="TileSet" id=5]
[ext_resource path="res://assets/tilesets/tiles_items.tres" type="TileSet" id=6]
[ext_resource path="res://assets/tilesets/tiles_spikes.tres" type="TileSet" id=7]
[ext_resource path="res://Player.tscn" type="PackedScene" id=8]

[node name="LevelTemplate" type="Node"]

script = ExtResource( 1 )
player_texture = null
tileset_texture = null

[node name="ParallaxBackground" type="ParallaxBackground" parent="." index="0"]

layer = -1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )
transform = Transform2D( 1, 0, 0, 1, 0, 0 )
scroll_offset = Vector2( 30, 0 )
scroll_base_offset = Vector2( 0, 0 )
scroll_base_scale = Vector2( 1, 1 )
scroll_limit_begin = Vector2( 0, 0 )
scroll_limit_end = Vector2( 0, 0 )
scroll_ignore_camera_zoom = false
_sections_unfolded = [ "Scroll" ]

[node name="Back" type="ParallaxLayer" parent="ParallaxBackground" index="0"]

motion_scale = Vector2( 0.2, 1 )
motion_offset = Vector2( 0, 0 )
motion_mirroring = Vector2( 577, 0 )
_sections_unfolded = [ "Motion" ]

[node name="Sprite" type="Sprite" parent="ParallaxBackground/Back" index="0"]

position = Vector2( 0, 65.9998 )
scale = Vector2( 2.5, 1.5 )
texture = ExtResource( 2 )
_sections_unfolded = [ "Transform" ]

[node name="Mid" type="ParallaxLayer" parent="ParallaxBackground" index="1"]

position = Vector2( 0, 213 )
motion_scale = Vector2( 0.6, 1 )
motion_offset = Vector2( 0, 0 )
motion_mirroring = Vector2( 880, 0 )
_sections_unfolded = [ "Motion" ]

[node name="Sprite" type="Sprite" parent="ParallaxBackground/Mid" index="0"]

scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 3 )
region_enabled = true
region_rect = Rect2( 0, 0, 880, 368 )
_sections_unfolded = [ "Region", "Transform" ]

[node name="CanvasLayer" type="CanvasLayer" parent="." index="1"]

layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )
transform = Transform2D( 1, 0, 0, 1, 0, 0 )

[node name="HUD" parent="CanvasLayer" index="0" instance=ExtResource( 4 )]

[node name="Backdrop" type="TileMap" parent="." index="2"]

modulate = Color( 0.817686, 0.816667, 0.822235, 1 )
mode = 0
tile_set = ExtResource( 5 )
cell_size = Vector2( 16, 16 )
cell_quadrant_size = 16
cell_custom_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
cell_half_offset = 2
cell_tile_origin = 0
cell_y_sort = false
cell_clip_uv = false
collision_use_kinematic = false
collision_friction = 1.0
collision_bounce = 0.0
collision_layer = 0
collision_mask = 0
occluder_light_mask = 1
format = 1
tile_data = PoolIntArray(  )
_sections_unfolded = [ "Collision", "Visibility" ]

[node name="World" type="TileMap" parent="." index="3"]

mode = 0
tile_set = ExtResource( 5 )
cell_size = Vector2( 16, 16 )
cell_quadrant_size = 16
cell_custom_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
cell_half_offset = 2
cell_tile_origin = 0
cell_y_sort = false
cell_clip_uv = false
collision_use_kinematic = false
collision_friction = 1.0
collision_bounce = 0.0
collision_layer = 1
collision_mask = 6
occluder_light_mask = 1
format = 1
tile_data = PoolIntArray(  )
_sections_unfolded = [ "Collision" ]

[node name="Obstacles" type="TileMap" parent="." index="4"]

mode = 0
tile_set = ExtResource( 6 )
cell_size = Vector2( 16, 16 )
cell_quadrant_size = 16
cell_custom_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
cell_half_offset = 2
cell_tile_origin = 0
cell_y_sort = false
cell_clip_uv = false
collision_use_kinematic = false
collision_friction = 1.0
collision_bounce = 0.0
collision_layer = 1
collision_mask = 0
occluder_light_mask = 1
format = 1
tile_data = PoolIntArray(  )
_sections_unfolded = [ "Cell", "Collision" ]

[node name="DecorMid" type="TileMap" parent="." index="5"]

mode = 0
tile_set = ExtResource( 6 )
cell_size = Vector2( 16, 16 )
cell_quadrant_size = 16
cell_custom_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
cell_half_offset = 2
cell_tile_origin = 0
cell_y_sort = false
cell_clip_uv = false
collision_use_kinematic = false
collision_friction = 1.0
collision_bounce = 0.0
collision_layer = 0
collision_mask = 0
occluder_light_mask = 1
format = 1
tile_data = PoolIntArray(  )
_sections_unfolded = [ "Cell", "Collision" ]

[node name="DecorFront" type="TileMap" parent="." index="6"]

z_index = 2
mode = 0
tile_set = ExtResource( 6 )
cell_size = Vector2( 16, 16 )
cell_quadrant_size = 16
cell_custom_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
cell_half_offset = 2
cell_tile_origin = 0
cell_y_sort = false
cell_clip_uv = false
collision_use_kinematic = false
collision_friction = 1.0
collision_bounce = 0.0
collision_layer = 0
collision_mask = 0
occluder_light_mask = 1
format = 1
tile_data = PoolIntArray(  )
_sections_unfolded = [ "Cell", "Collision", "Z Index" ]

[node name="Foreground" type="TileMap" parent="." index="7"]

mode = 0
tile_set = ExtResource( 5 )
cell_size = Vector2( 16, 16 )
cell_quadrant_size = 16
cell_custom_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
cell_half_offset = 2
cell_tile_origin = 0
cell_y_sort = false
cell_clip_uv = false
collision_use_kinematic = false
collision_friction = 1.0
collision_bounce = 0.0
collision_layer = 0
collision_mask = 0
occluder_light_mask = 1
format = 1
tile_data = PoolIntArray(  )
_sections_unfolded = [ "Collision", "Visibility" ]

[node name="Danger" type="TileMap" parent="." index="8"]

mode = 0
tile_set = ExtResource( 7 )
cell_size = Vector2( 16, 16 )
cell_quadrant_size = 16
cell_custom_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
cell_half_offset = 2
cell_tile_origin = 0
cell_y_sort = false
cell_clip_uv = false
collision_use_kinematic = false
collision_friction = 1.0
collision_bounce = 0.0
collision_layer = 0
collision_mask = 0
occluder_light_mask = 1
format = 1
tile_data = PoolIntArray(  )
_sections_unfolded = [ "Cell", "Collision" ]

[node name="PlayerSpawn" type="Position2D" parent="." index="9"]

position = Vector2( 138.376, 53.7729 )

[node name="Player" parent="." index="10" instance=ExtResource( 8 )]

position = Vector2( 109.098, 25.2175 )
collision_layer = 3
collision_mask = 12

[connection signal="score_changed" from="." to="CanvasLayer/HUD" method="_on_score_changed"]

[connection signal="dead" from="Player" to="." method="_on_Player_dead"]

[connection signal="life_changed" from="Player" to="CanvasLayer/HUD" method="_on_Player_life_changed"]


